Fixed comments not loading when switching between posts. Added image fallback when awaiting videoTheme media query. Tweaked anchor positioning and line highlight contrast.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,7 +54,7 @@ a:focus-visible {
 
   .anchor.before {
     transition: opacity 200ms;
-    transform: translate(-100%, 8px) !important;
+    transform: translate(-100%, 9px) !important;
     opacity: 0.5;
   }
 
