--- a/src/styles/prism.scss
+++ b/src/styles/prism.scss
@@ -313,7 +313,7 @@ code[class*="language-css"] {
   }
 
   .gatsby-highlight-code-line {
-    background-color: rgba(75, 85, 99, 0.25);
+    background-color: rgba(75, 85, 99, 0.35);
   }
 
   .command-line-prompt span:before {
